# TrayTalk

./: .gitignore  config.py  database.py  deneme.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: README.md  dependencies.py  main.py  message_router.py
domain/: IEmbedder.py  ILLMClient.py  ILLMMessageHandler.py  IMessage.py  IReranker.py  IUserMessageHandler.py  IVectorDB.py  interfaces.py  models.py  services.py
infrastructure/: Embedder.py  OllamaClient.py  QdrantDB.py  client_strategy.py  dependencies.py  memory.py  repository.py  reranker.py
infrastructure/generation/: OllamaClient.py
llm_services/core/: llm_base.py  llm_clients.py
repository/: conversation_repository.py
routers/: dependencies.py  router.py  schemas.py
services/: LLMService.py  MessageHandlerService.py  RerankerService.py  VectorDBRetrievalService.py
